# lab-06-mult

./: .travis.yml  CMakeLists.txt  README.md
include/: HashFinder.h
scripts/: genenv.sh  run.sh
sources/: main.cpp
